code commited after deciding player is playing or not.

--- a/app/src/main/res/layout/selected_players.xml
+++ b/app/src/main/res/layout/selected_players.xml
@@ -39,17 +39,35 @@
                 android:layout_height="60dp"
                 android:src="@drawable/ic_baseline_person_3" />
 
-            <TextView
-                android:id="@+id/playerName"
-                android:layout_width="50dp"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_weight="3"
-                android:gravity="left"
-                android:maxLines="1"
-                android:textColor="@color/black"
-                android:textSize="12sp"
-                android:textStyle="bold" />
+           <LinearLayout
+               android:layout_width="50dp"
+               android:layout_height="wrap_content"
+
+               android:layout_weight="3"
+               android:orientation="vertical">
+
+               <TextView
+                   android:id="@+id/playerName"
+                   android:layout_width="match_parent"
+                   android:layout_height="wrap_content"
+                   android:layout_marginTop="15dp"
+                   android:layout_gravity="center"
+                   android:maxLines="1"
+                   android:textColor="@color/black"
+                   android:textSize="12sp"
+                   android:textStyle="bold" />
+
+               <TextView
+                   android:id="@+id/isPlaying"
+                   android:layout_width="match_parent"
+                   android:layout_height="wrap_content"
+                   android:layout_marginLeft="7dp"
+                   android:layout_gravity="center"
+                   android:maxLines="1"
+                   android:textColor="@color/green"
+                   android:textSize="9sp"
+                   android:textStyle="normal" />
+           </LinearLayout>
 
             <View
                 android:layout_width="0dp"
