--- a/app/src/main/res/layout/team_preview.xml
+++ b/app/src/main/res/layout/team_preview.xml
@@ -6,11 +6,11 @@
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="80dp">
+        android:layout_height="75dp">
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="70dp"
+            android:layout_height="65dp"
             android:layout_gravity="center"
             android:layout_marginLeft="5dp"
             android:layout_marginRight="7dp"
@@ -21,7 +21,7 @@
 
             <TextView
                 android:id="@+id/country"
-                android:layout_width="30dp"
+                android:layout_width="50dp"
                 android:layout_height="match_parent"
                 android:layout_gravity="top"
                 android:layout_weight=".2"
@@ -38,61 +38,126 @@
                 android:layout_height="60dp"
                 android:src="@drawable/ic_baseline_person_3" />
 
-            <TextView
-                android:id="@+id/playerName"
+            <RelativeLayout
+                android:id="@+id/RL_Name"
                 android:layout_width="50dp"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_weight="3"
-                android:gravity="left"
-                android:maxLines="1"
-                android:textColor="@color/black"
-                android:textSize="12sp"
-                android:textStyle="bold" />
+                android:layout_centerVertical="true"
+                android:layout_marginLeft="10dp"
+                android:layout_toRightOf="@+id/playerImg"
+                android:layout_weight="3">
 
-            <TextView
-                android:layout_width="50dp"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:gravity="left"
-                android:maxLines="1"
-                android:textColor="@color/black"
-                android:textSize="12sp"
-                android:textStyle="bold" />
+                <TextView
+                    android:id="@+id/playerName"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:gravity="left"
+                    android:maxLines="1"
+                    android:textColor="@color/black"
+                    android:textSize="12sp"
+                    android:textStyle="bold" />
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/playerName"
+                    android:gravity="center"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:id="@+id/playerPoints"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:gravity="left"
+                        android:maxLines="1"
+                        android:textColor="@color/black"
+                        android:textSize="11sp" />
+
+                </LinearLayout>
+
+            </RelativeLayout>
 
             <View
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="3" />
 
-            <RadioGroup
-                android:id="@+id/radioGrp"
+            <LinearLayout
+                android:id="@+id/cvcLiner"
                 android:layout_width="100dp"
                 android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:layout_centerVertical="true"
                 android:layout_weight="2"
-                android:orientation="horizontal">
+                android:gravity="center"
+                android:orientation="vertical">
 
-                <RadioButton
-                    android:id="@+id/radioM"
-                    android:layout_width="50dp"
+                <LinearLayout
+                    android:id="@+id/c_vc"
+                    android:layout_width="100dp"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="left"
-                    android:layout_weight="1"
-                    android:gravity="center"
-                    android:text="C"
-                    android:textSize="17sp" />
+                    android:layout_alignParentRight="true"
+                    android:layout_centerVertical="true"
+                    android:orientation="horizontal">
 
-                <RadioButton
-                    android:id="@+id/radioF"
-                    android:layout_width="50dp"
+                    <TextView
+                        android:id="@+id/tv_c"
+                        android:layout_width="35dp"
+                        android:layout_height="35dp"
+                        android:layout_gravity="center"
+                        android:layout_marginRight="22dp"
+                        android:background="@drawable/c_vc_border_rounded"
+                        android:gravity="center"
+                        android:text="C"
+                        android:textColor="@color/black" />
+
+                    <TextView
+                        android:id="@+id/tv_vc"
+                        android:layout_width="35dp"
+                        android:layout_height="35dp"
+                        android:layout_gravity="center"
+                        android:background="@drawable/c_vc_border_rounded"
+                        android:gravity="center"
+                        android:text="VC"
+                        android:textColor="@color/black" />
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="100dp"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="right"
-                    android:layout_weight="1"
-                    android:gravity="center"
-                    android:text="VC"
-                    android:textSize="17sp" />
+                    android:layout_below="@+id/c_vc"
+                    android:layout_alignParentRight="true"
+                    android:layout_centerVertical="true"
+                    android:orientation="horizontal">
 
-            </RadioGroup>
+                    <TextView
+                        android:id="@+id/c_points"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:layout_marginRight="15dp"
+                        android:layout_weight="1"
+                        android:gravity="center"
+                        android:text="2.0x"
+                        android:textColor="@color/black" />
+
+                    <TextView
+                        android:id="@+id/vc_points"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="start"
+                        android:layout_marginLeft="5dp"
+                        android:layout_weight="1"
+                        android:gravity="start"
+                        android:text="1.5x"
+                        android:textColor="@color/black" />
+
+                </LinearLayout>
+
+            </LinearLayout>
 
         </LinearLayout>
 
