--- a/app/src/main/res/layout/activity_team_preview.xml
+++ b/app/src/main/res/layout/activity_team_preview.xml
@@ -35,6 +35,16 @@
                 android:textColor="@color/white"
                 android:textSize="15sp" />
 
+            <TextView
+                android:id="@+id/done"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="9"
+                android:gravity="center"
+                android:textColor="@color/white"
+                android:textSize="15sp"
+                android:visibility="gone" />
+
         </LinearLayout>
 
     </androidx.appcompat.widget.Toolbar>
