--- a/app/src/main/res/layout/my_created_team_list.xml
+++ b/app/src/main/res/layout/my_created_team_list.xml
@@ -1,30 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical">
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="150dp"
         android:layout_margin="5dp"
-        app:cardCornerRadius="8dp"
-        android:layout_marginTop="20dp">
+        android:layout_marginTop="20dp"
+        app:cardCornerRadius="8dp">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="40dp"
             android:background="@color/dark_green"
-            android:gravity="center"
             android:orientation="horizontal"
             android:weightSum="10">
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_gravity="center"
                 android:layout_weight="4"
-                android:gravity="center"
+                android:gravity="left"
                 android:text="User Name (T1)"
                 android:textColor="@color/white"
                 android:textSize="15sp" />
@@ -34,13 +34,14 @@
                 android:layout_height="match_parent"
                 android:layout_weight="5" />
 
-            <ImageView
+            <TextView
                 android:id="@+id/editImg"
                 android:layout_width="25dp"
                 android:layout_height="25dp"
                 android:layout_alignParentRight="true"
+                android:layout_gravity="center"
                 android:layout_marginHorizontal="10dp"
-                android:src="@drawable/ic_baseline_edit_24" />
+                android:drawableRight="@drawable/ic_baseline_edit_24" />
 
         </LinearLayout>
 
