--- a/app/src/main/res/layout/fragment_contests.xml
+++ b/app/src/main/res/layout/fragment_contests.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".Fragment.ContestsFragment">
+    tools:context=".InSideContestActivityFragments.ContestsFragment">
 
     <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
         android:id="@+id/swiper"
