--- a/app/src/main/res/layout/activity_contest.xml
+++ b/app/src/main/res/layout/activity_contest.xml
@@ -170,4 +170,29 @@
 
     </LinearLayout>
 
+    <LinearLayout
+        android:id="@+id/createTeamLay"
+        android:layout_width="match_parent"
+        android:layout_height="38dp"
+        android:layout_gravity="center"
+        android:layout_marginLeft="100dp"
+        android:layout_marginRight="100dp"
+        android:gravity="center"
+        android:orientation="horizontal"
+        android:visibility="gone">
+
+        <TextView
+            android:id="@+id/createTeam1"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_gravity="center"
+            android:background="@drawable/border2_black"
+            android:gravity="center"
+            android:text="+ CREATED TEAM"
+            android:textColor="@color/white"
+            android:textSize="16sp"
+            android:textStyle="bold" />
+
+    </LinearLayout>
+
 </LinearLayout>
