--- a/app/src/main/res/layout/fragment_my_teams.xml
+++ b/app/src/main/res/layout/fragment_my_teams.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    tools:context=".Fragment.MyTeamsFragment">
+    tools:context=".InSideContestActivityFragments.MyTeamsFragment">
 
     <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
         android:id="@+id/swiper"
@@ -18,26 +18,5 @@
             android:layout_margin="5dp" />
 
     </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="100dp"
-        android:layout_marginTop="600dp"
-        android:layout_marginRight="100dp"
-        android:orientation="horizontal">
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="45dp"
-            android:layout_gravity="center"
-            android:background="@drawable/border2_black"
-            android:gravity="center"
-            android:text="+ CREATED TEAM"
-            android:textColor="@color/white"
-            android:textSize="19sp"
-            android:textStyle="bold" />
-
-    </LinearLayout>
 
 </FrameLayout>
