--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -19,4 +19,5 @@
     <color name="yellow_theme">#ECBD15</color>
     <color name="gray_light1">#81D3E8</color>
     <color name="light_pink">#F3E5F0</color>
+    <color name="bg_color">#5EB7DA</color>
 </resources>
