--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -2,16 +2,15 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@color/bg_color"
+    android:layout_height="wrap_content"
     android:orientation="vertical"
-    tools:context=".ChatFirebase.DirectChatActivity">
+    tools:context=".ChatFirebase.ChatActivity">
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/black"
+        android:background="@color/white"
         tools:ignore="MissingConstraints">
 
         <LinearLayout
@@ -26,7 +25,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:background="@drawable/ic_baseline_close_24"
+                android:background="@drawable/ic_baseline_close_black"
                 android:gravity="left" />
 
             <View
@@ -38,17 +37,17 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:layout_weight="1"
-                android:gravity="left"
-                android:text="Direct Chat"
-                android:textColor="#ffff"
-                android:textSize="18sp"
+                android:layout_weight="8"
+                android:gravity="center"
+                android:text="Send A Message"
+                android:textColor="#000"
+                android:textSize="16sp"
                 android:textStyle="bold" />
 
             <View
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:layout_weight="8" />
+                android:layout_weight="1" />
 
         </LinearLayout>
 
@@ -57,6 +56,33 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerView"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="@dimen/_500sdp" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom"
+        android:gravity="center"
+        android:weightSum="10">
+
+        <EditText
+            android:id="@+id/message"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom"
+            android:layout_weight="9"
+            android:gravity="left"
+            android:hint="Message"
+            android:textColor="@color/black" />
+
+        <TextView
+            android:id="@+id/send"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom"
+            android:drawableRight="@drawable/ic_baseline_send_24"
+            android:gravity="center" />
+
+    </LinearLayout>
 
 </LinearLayout>
