--- a/app/src/main/res/layout/my_created_team_list.xml
+++ b/app/src/main/res/layout/my_created_team_list.xml
@@ -96,37 +96,43 @@
             android:layout_height="20dp"
             android:layout_marginTop="110dp"
             android:background="@color/green"
+            android:gravity="center"
             android:orientation="horizontal"
             android:weightSum="12">
 
             <TextView
-                android:layout_width="0dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="4"
+                android:layout_weight="5"
                 android:gravity="center"
                 android:text="4"
                 android:textColor="@color/white" />
 
             <TextView
-                android:layout_width="0dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="4"
+                android:layout_weight="5"
                 android:gravity="center"
                 android:text="7"
                 android:textColor="@color/white" />
 
             <TextView
-                android:layout_width="0dp"
+                android:id="@+id/CName"
+                android:layout_width="55dp"
                 android:layout_height="wrap_content"
-                android:layout_weight="2"
                 android:gravity="center"
-                android:text="MS"
+                android:text="Rahul"
                 android:textColor="@color/white" />
 
-            <TextView
+            <View
                 android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="2" />
+
+            <TextView
+                android:id="@+id/VCname"
+                android:layout_width="55dp"
                 android:layout_height="wrap_content"
-                android:layout_weight="2"
                 android:gravity="center"
                 android:text="Rohit"
                 android:textColor="@color/white" />
@@ -142,7 +148,7 @@
             android:weightSum="12">
 
             <LinearLayout
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="3"
                 android:orientation="horizontal">
@@ -150,6 +156,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_weight="3"
                     android:gravity="center"
                     android:text="WK"
                     android:textColor="@color/black" />
@@ -165,7 +172,7 @@
             </LinearLayout>
 
             <LinearLayout
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="3"
                 android:orientation="horizontal">
@@ -189,7 +196,7 @@
             </LinearLayout>
 
             <LinearLayout
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="3"
                 android:orientation="horizontal">
@@ -213,7 +220,7 @@
             </LinearLayout>
 
             <LinearLayout
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="3"
                 android:orientation="horizontal">
