--- a/app/src/main/res/layout/my_created_team_list.xml
+++ b/app/src/main/res/layout/my_created_team_list.xml
@@ -156,7 +156,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_weight="3"
+                    android:layout_weight=".5"
                     android:gravity="center"
                     android:text="WK"
                     android:textColor="@color/black" />
@@ -165,9 +165,15 @@
                     android:id="@+id/wkTv"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_weight=".5"
                     android:gravity="center"
                     android:text="0"
                     android:textColor="@color/black" />
+
+                <View
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="2" />
 
             </LinearLayout>
 
@@ -180,7 +186,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_weight="3"
+                    android:layout_weight=".5"
                     android:gravity="center"
                     android:text="BAT"
                     android:textColor="@color/black" />
@@ -189,9 +195,15 @@
                     android:id="@+id/batTv"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_weight=".5"
                     android:gravity="center"
                     android:text="0"
                     android:textColor="@color/black" />
+
+                <View
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="2" />
 
             </LinearLayout>
 
@@ -204,7 +216,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_weight="3"
+                    android:layout_weight=".5"
                     android:gravity="center"
                     android:text="AR"
                     android:textColor="@color/black" />
@@ -213,9 +225,15 @@
                     android:id="@+id/arTv"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_weight=".5"
                     android:gravity="center"
                     android:text="0"
                     android:textColor="@color/black" />
+
+                <View
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="2" />
 
             </LinearLayout>
 
@@ -228,7 +246,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_weight="3"
+                    android:layout_weight=".5"
                     android:gravity="center"
                     android:text="BOWL"
                     android:textColor="@color/black" />
@@ -237,9 +255,15 @@
                     android:id="@+id/bowlTv"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_weight=".5"
                     android:gravity="center"
                     android:text="0"
                     android:textColor="@color/black" />
+
+                <View
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="2" />
 
             </LinearLayout>
 
