--- a/app/src/main/res/layout/my_created_team_list.xml
+++ b/app/src/main/res/layout/my_created_team_list.xml
@@ -8,7 +8,7 @@
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="150dp"
-        android:layout_margin="5dp"
+        android:layout_margin="10dp"
         android:layout_marginTop="20dp"
         app:cardCornerRadius="8dp">
 
@@ -20,14 +20,17 @@
             android:weightSum="10">
 
             <TextView
+                android:id="@+id/userNameAndTid"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
+                android:layout_marginStart="7dp"
                 android:layout_weight="4"
                 android:gravity="left"
                 android:text="User Name (T1)"
                 android:textColor="@color/white"
-                android:textSize="15sp" />
+                android:textSize="15sp"
+                android:textStyle="bold" />
 
             <View
                 android:layout_width="0dp"
@@ -61,7 +64,8 @@
                 android:layout_weight="5"
                 android:gravity="center"
                 android:text="MI"
-                android:textColor="@color/white" />
+                android:textColor="@color/white"
+                android:textStyle="bold" />
 
             <TextView
                 android:id="@+id/teamB"
@@ -70,7 +74,8 @@
                 android:layout_weight="5"
                 android:gravity="center"
                 android:text="CSK"
-                android:textColor="@color/white" />
+                android:textColor="@color/white"
+                android:textStyle="bold" />
 
             <ImageView
                 android:id="@+id/image1"
@@ -101,19 +106,19 @@
             android:weightSum="12">
 
             <TextView
+                android:id="@+id/teamACount"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="5"
                 android:gravity="center"
-                android:text="4"
                 android:textColor="@color/white" />
 
             <TextView
+                android:id="@+id/teamBCount"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="5"
                 android:gravity="center"
-                android:text="7"
                 android:textColor="@color/white" />
 
             <TextView
@@ -122,7 +127,8 @@
                 android:layout_height="wrap_content"
                 android:gravity="center"
                 android:text="Rahul"
-                android:textColor="@color/white" />
+                android:textColor="@color/white"
+                android:textStyle="bold" />
 
             <View
                 android:layout_width="0dp"
@@ -135,7 +141,8 @@
                 android:layout_height="wrap_content"
                 android:gravity="center"
                 android:text="Rohit"
-                android:textColor="@color/white" />
+                android:textColor="@color/white"
+                android:textStyle="bold" />
 
         </LinearLayout>
 
@@ -168,7 +175,8 @@
                     android:layout_weight=".5"
                     android:gravity="center"
                     android:text="0"
-                    android:textColor="@color/black" />
+                    android:textColor="@color/black"
+                    android:textStyle="bold" />
 
                 <View
                     android:layout_width="0dp"
@@ -198,7 +206,8 @@
                     android:layout_weight=".5"
                     android:gravity="center"
                     android:text="0"
-                    android:textColor="@color/black" />
+                    android:textColor="@color/black"
+                    android:textStyle="bold" />
 
                 <View
                     android:layout_width="0dp"
@@ -228,7 +237,8 @@
                     android:layout_weight=".5"
                     android:gravity="center"
                     android:text="0"
-                    android:textColor="@color/black" />
+                    android:textColor="@color/black"
+                    android:textStyle="bold" />
 
                 <View
                     android:layout_width="0dp"
@@ -258,7 +268,8 @@
                     android:layout_weight=".5"
                     android:gravity="center"
                     android:text="0"
-                    android:textColor="@color/black" />
+                    android:textColor="@color/black"
+                    android:textStyle="bold" />
 
                 <View
                     android:layout_width="0dp"
