--- a/app/src/main/res/layout/my_created_team_list.xml
+++ b/app/src/main/res/layout/my_created_team_list.xml
@@ -8,7 +8,9 @@
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="150dp"
-        android:layout_margin="10dp"
+        android:layout_marginBottom="5dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
         android:layout_marginTop="20dp"
         app:cardCornerRadius="8dp">
 
