--- a/app/src/main/res/layout/selected_players.xml
+++ b/app/src/main/res/layout/selected_players.xml
@@ -64,7 +64,7 @@
                     android:maxLines="1"
                     android:textColor="@color/green"
                     android:textSize="11sp"
-                    android:textStyle="normal" />
+                    android:textStyle="bold" />
 
             </LinearLayout>
 
