--- a/app/src/main/res/layout/activity_add_cash2.xml
+++ b/app/src/main/res/layout/activity_add_cash2.xml
@@ -45,6 +45,7 @@
 
     </androidx.appcompat.widget.Toolbar>
 
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="40dp"
@@ -56,7 +57,7 @@
         <TextView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="6"
+            android:layout_weight="4"
             android:text="Total Balance"
             android:textColor="@color/black" />
 
@@ -64,7 +65,7 @@
             android:id="@+id/amountTv"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="4"
+            android:layout_weight="6"
             android:drawableLeft="@drawable/indian_rupiya_symbol"
             android:drawablePadding="4dp"
             android:padding="7dp"
@@ -113,20 +114,62 @@
         <TextView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="6"
+            android:layout_weight="4"
             android:text="Cash Bonus"
             android:textColor="@color/black" />
 
         <TextView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="4"
+            android:layout_weight="6"
             android:drawableLeft="@drawable/indian_rupiya_symbol"
             android:drawablePadding="4dp"
+            android:id="@+id/bonusTv"
             android:padding="7dp"
             android:text="0"
             android:textColorHint="#555555"
             android:textSize="16sp" />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:layout_margin="10dp"
+        android:background="@color/light_gray"
+        android:orientation="horizontal"
+        android:weightSum="10">
+
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="4"
+            android:text="Winnings"
+            android:textColor="@color/black" />
+
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="3"
+            android:drawableLeft="@drawable/indian_rupiya_symbol"
+            android:drawablePadding="4dp"
+            android:id="@+id/winningsTV"
+            android:padding="7dp"
+            android:text="0"
+            android:textColorHint="#555555"
+            android:textSize="16sp" />
+
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:id="@+id/withdrawTv"
+            android:layout_weight="3"
+            android:text="Withdraw"
+            android:gravity="center"
+            android:background="@drawable/border_red"
+            android:textSize="15sp"
+            android:textColor="@color/white"
+            android:textStyle="bold"/>
 
     </LinearLayout>
 
@@ -245,7 +288,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="100dp"
-        android:layout_marginTop="150dp"
+        android:layout_marginTop="80dp"
         android:layout_marginRight="100dp"
         android:orientation="horizontal">
 
@@ -259,5 +302,6 @@
             android:textColor="@color/white"
             android:textStyle="bold" />
     </LinearLayout>
+
 
 </LinearLayout>
