--- a/app/src/main/res/layout/activity_recent_transactions.xml
+++ b/app/src/main/res/layout/activity_recent_transactions.xml
@@ -9,6 +9,7 @@
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
+        android:background="@color/red"
         android:layout_height="55dp"
         tools:ignore="MissingConstraints">
 
@@ -22,6 +23,7 @@
                 android:id="@+id/backPress"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:backgroundTint="@color/white"
                 android:background="@drawable/ic_baseline_arrow_back_24"
                 android:gravity="left" />
 
@@ -31,7 +33,7 @@
                 android:layout_weight="9"
                 android:gravity="center"
                 android:text="Recent Transactions"
-                android:textColor="@color/black"
+                android:textColor="@color/white"
                 android:textSize="15sp" />
 
         </LinearLayout>
@@ -44,15 +46,6 @@
         android:layout_margin="10dp"
         android:layout_marginTop="70dp"
         android:orientation="vertical">
-
-        <Button
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Transaction Date"
-            android:textColor="@color/black"
-            android:backgroundTint="@color/light_gray"
-            android:id="@+id/transactionDate"/>
-
         <ListView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
